# aarch64_type1_hypervisor

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  MERGE_CONFLICTS.md  README.md  RESOLUTION_SUMMARY.md  codex.md  create_linux_bin.sh  flake.nix  run.sh  run_rpi4.sh  rust-toolchain.toml  setup.sh  test.lds  xtest.txt
.cargo/: config.toml
.github/workflows/: check.yml  publish-branches.yml
allocator/: Cargo.toml
allocator/src/: aligned_box.rs  buddy_allocator.rs  lib.rs  range_list_allocator.rs
arch_hal/: Cargo.toml
arch_hal/aarch64_hal/: Cargo.toml
arch_hal/aarch64_hal/aarch64_gdb/: Cargo.toml
arch_hal/aarch64_hal/aarch64_gdb/src/: lib.rs  semihost.rs
arch_hal/aarch64_hal/aarch64_gdb/src/xml/: aarch64-core.xml  aarch64-system.xml  target.xml
arch_hal/aarch64_hal/aarch64_mutex/: Cargo.toml
arch_hal/aarch64_hal/aarch64_mutex/src/: lib.rs
arch_hal/aarch64_hal/aarch64_test/: Cargo.toml
arch_hal/aarch64_hal/aarch64_test/src/: lib.rs
arch_hal/aarch64_hal/aarch64_unit_test/: Cargo.toml  README.md
arch_hal/aarch64_hal/aarch64_unit_test/src/: lib.rs  stack_canary.rs
arch_hal/aarch64_hal/common/src/: addr.rs  irq.rs  lib.rs  mem.rs  mmio.rs  mmio_hook.rs
arch_hal/aarch64_hal/cpu/: Cargo.toml
arch_hal/aarch64_hal/cpu/src/: cache.rs  lib.rs  registers.rs
arch_hal/aarch64_hal/exceptions/: Cargo.toml
arch_hal/aarch64_hal/exceptions/src/: common_handler.rs  el1.rs  irq_handler.rs  lib.rs  memory_hook.rs  post_handler.rs  registers.rs  synchronous_handler.rs
arch_hal/aarch64_hal/exceptions/src/emulation/: load.rs  mod.rs  store.rs
arch_hal/aarch64_hal/gic/: Cargo.toml  mod.rs
arch_hal/aarch64_hal/gic/scripts/: run_gicv2_pending_test.sh
arch_hal/aarch64_hal/gic/src/: dt_irq.rs  lib.rs  registers.rs
arch_hal/aarch64_hal/gic/src/gicv2/: cpu_interface.rs  distributor.rs  mod.rs  registers.rs  vgic_frontend.rs  virtualization.rs
arch_hal/aarch64_hal/gic/src/gicv3/: mod.rs  registers.rs
arch_hal/aarch64_hal/gic/src/vm/: manager.rs  mod.rs  v2_ext.rs  vcpu.rs
arch_hal/aarch64_hal/gic/src/vm/common/: irq_state.rs  mod.rs  pirq.rs  routing.rs  vcpu_array.rs
arch_hal/aarch64_hal/gic/tests/: gicv2_pending.rs  gicv2_ppi_enable.rs  gicv2_vgic_pending.rs  vgic_e2e_common.rs  vgic_e2e_irq.rs  vgic_e2e_physical_ppi.rs  vgic_e2e_physical_ppi_rpi_boot.rs  vgic_e2e_physical_ppi_rpi_boot_hwlr_drop_only.rs  vgic_e2e_poll.rs  vgic_types.rs
arch_hal/aarch64_hal/paging/: Cargo.toml
arch_hal/aarch64_hal/paging/scripts/: run_stage_paging_test.sh
arch_hal/aarch64_hal/paging/src/: descriptor.rs  lib.rs  registers.rs
arch_hal/aarch64_hal/paging/src/stage1/: descriptors.rs  mod.rs  registers.rs
arch_hal/aarch64_hal/paging/src/stage2/: descriptor.rs  mod.rs  registers.rs
arch_hal/aarch64_hal/paging/tests/: stage1_translation.rs  stage2_translation.rs
arch_hal/aarch64_hal/pl011/src/: lib.rs
arch_hal/aarch64_hal/print/: Cargo.toml
arch_hal/aarch64_hal/print/src/: lib.rs  pl011.rs  stream.rs
arch_hal/aarch64_hal/psci/: Cargo.toml
arch_hal/aarch64_hal/psci/src/: lib.rs
arch_hal/aarch64_hal/soc/: Cargo.toml
arch_hal/aarch64_hal/soc/example/ethernet_loopback/: Cargo.toml  aarch64.lds  build.rs
arch_hal/aarch64_hal/soc/example/ethernet_loopback/src/: main.rs
arch_hal/aarch64_hal/soc/example/rpi5_rp1_init/: Cargo.toml  README.md
arch_hal/aarch64_hal/soc/example/rpi5_rp1_init/src/: main.rs
arch_hal/aarch64_hal/soc/example/rpi5_rp1_net_smoke/: Cargo.toml  README.md
arch_hal/aarch64_hal/soc/example/rpi5_rp1_net_smoke/src/: main.rs
arch_hal/aarch64_hal/soc/src/: lib.rs
arch_hal/aarch64_hal/soc/src/bcm2711/: genet.rs  gpio.rs  mod.rs
arch_hal/aarch64_hal/soc/src/bcm2712/: brcmstb.rs  mip.rs  mod.rs  pcie_validation.rs  pirq_hook.rs  rp1.rs  rp1_gem.rs  rp1_interrupt.rs  sdhc.rs
arch_hal/aarch64_hal/src/: lib.rs
arch_hal/aarch64_hal/timer/: Cargo.toml
arch_hal/aarch64_hal/timer/src/: lib.rs  physical_timer.rs  systimer.rs
arch_hal/aarch64_hal/tls/: Cargo.toml  README.md
arch_hal/aarch64_hal/tls/src/: lib.rs
arch_hal/src/: lib.rs
bootloader/: Cargo.toml  aarch64-rpi4.lds  aarch64.lds  build.rs
bootloader/src/: debug.rs  gdb.rs  gdb_stream.rs  gdb_uart.rs  gdb_uart_udp.rs  genet_selftest.rs  guest_el1_demo_vectors.rs  handler.rs  irq_decode.rs  irq_monitor.rs  main.rs  monitor.rs  softirq.rs  vbar.rs  vbar_watch.rs  vgic.rs
bootloader/src/net/: config.rs  mod.rs  rpi4.rs  udp_uart.rs  virtio.rs
byte_stream/: Cargo.toml
byte_stream/src/: lib.rs
doc/: rp1_gem_rx_validation.md  rp1_gem_wire_tx_validation.md
doc/hyprprobe/: README.md  monitor.md
dtb/: Cargo.toml  build.rs
dtb/src/: ast.rs  lib.rs  overlay.rs  patch.rs  tree_copy.rs
elf/: Cargo.toml
elf/src/: lib.rs
file/: Cargo.toml
file/block-device/: Cargo.toml
file/block-device-api/src/: lib.rs  virtio_blk_mmio.rs
file/block-device/scripts/: run_qemu.sh
file/block-device/src/: lib.rs  virtio_blk.rs
file/block-device/tests/: virtio_blk_modern.rs
file/filesystem/: Cargo.toml
file/filesystem/src/: filesystem.rs  lib.rs
file/filesystem/src/filesystem/: fat.rs  fat32.rs
file/filesystem/src/filesystem/fat32/: fat.rs  sector.rs
file/scripts/: run_fat32_virtio_test.sh
file/src/: lib.rs  partition.rs
file/tests/: fat32_virtio.rs
gdb_remote/: Cargo.toml
gdb_remote/scripts/: gdb_remote_test.gdb  run_uefi_gdb_remote_qxfer_test.sh  run_uefi_gdb_remote_test.sh
gdb_remote/src/: lib.rs  rsp_framing.rs  target.rs
gdb_remote/tests/: rsp_binary_decode.rs  rsp_frame_assembler.rs  uefi_basic_handshake.rs  uefi_packet_size.rs  uefi_qxfer_features.rs
intrusive_linked_list/: Cargo.toml
intrusive_linked_list/src/: lib.rs
io_api/: Cargo.toml
io_api/src/: lib.rs  (+4 more)
mutex/: Cargo.toml
net/: Cargo.toml
pci/: Cargo.toml
rpi_boot/: Cargo.toml  aarch64.lds  build.rs  config.txt
rpi_boot/src/: brcmstb.rs  dtb.rs  handler.rs  main.rs  multicore.rs  pci_config.rs  pcie.rs  stack_overflow.rs  vgic.rs  virtio_blk.rs
tools/: export_branches.py
typestate/: Cargo.toml
typestate_macro/: Cargo.toml
u-boot/: boot.txt
virtio/: Cargo.toml
(+43 files in other folders)
