[workspace]
resolver = "3"
members = [
    "allocator",
    "arch_hal",
    "bootloader",
    "byte_stream",
    "dtb",
    "elf",
    "file",
    "gdb_remote",
    "intrusive_linked_list",
    "mutex",
    "pci",
    "rpi_boot",
    "typestate",
    "typestate_macro",
    "virtio",
    "xtask",
]

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
[profile.test]
panic = 'abort'
[profile.bench]
panic = 'abort'
