[workspace]
resolver = "3"
members = [
    "allocator",
    "arch_hal",
    "bootloader",
    "dtb",
    "elf",
    "file",
    "gdb_remote",
    "io_api",
    "intrusive_linked_list",
    "mutex",
    "net",
    "pci",
    "rpi_boot",
    "typestate",
    "typestate_macro",
    "virtio",
    "xtask",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"

[profile.release]
panic = 'abort'
debug = true
[profile.dev]
panic = 'abort'
[profile.test]
panic = 'abort'
[profile.bench]
panic = 'abort'
