[package]
name = "allocator"
version = "0.1.0"
edition = "2024"

[dependencies]
mutex = { path = "../mutex" }
intrusive_linked_list = { path = "../intrusive_linked_list" }
typestate = { path = "../typestate" }

[features]
debug-assertions = []
no-alloc-error-handler = []
no-allocator = []

[lints]
workspace = true
