[package]
name = "arch_hal"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64_hal = { path = "./aarch64_hal", optional = true, default-features = false }

[features]
default = ["dep:aarch64_hal", "aarch64_hal/paging"]
uefi-test = ["dep:aarch64_hal", "aarch64_hal/uefi-test"]
