[package]
name = "elf-hypervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
dtb = { path = "../dtb" }
allocator = { path = "../allocator" }
typestate = { path = "../typestate" }
file = { path = "../file" }
elf = { path = "../elf" }
arch_hal = { path = "../arch_hal" }
gdb_remote = { path = "../gdb_remote" }
mutex = { path = "../mutex" }

[dev-dependencies]
aarch64_unit_test = { path = "../arch_hal/aarch64_hal/aarch64_unit_test" }
aarch64_test = { path = "../arch_hal/aarch64_hal/aarch64_test" }

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'
