[package]
name = "gdb_remote"
version = "0.1.0"
edition = "2024"

[dependencies]
byte_stream = { path = "../byte_stream" }

[dev-dependencies]
aarch64_test = { path = "../arch_hal/aarch64_hal/aarch64_test" }
print = { path = "../arch_hal/aarch64_hal/print" }

[lib]
doctest = false
test = false

[[test]]
name = "uefi_basic_handshake"
path = "tests/uefi_basic_handshake.rs"
harness = false
