[package]
name = "gdb_remote"
version = "0.1.0"
edition = "2024"

[features]
default = []
gdb_monitor_debug = []

[dependencies]

[dev-dependencies]
aarch64_test = { path = "../arch_hal/aarch64_hal/aarch64_test" }
print = { path = "../arch_hal/aarch64_hal/print" }

[lib]
doctest = false
test = false

[[test]]
name = "uefi_basic_handshake"
path = "tests/uefi_basic_handshake.rs"
harness = false

[[test]]
name = "uefi_qxfer_features"
path = "tests/uefi_qxfer_features.rs"
harness = false

[[test]]
name = "uefi_packet_size"
path = "tests/uefi_packet_size.rs"
harness = false
