[package]
name = "rpi_boot"
version = "0.1.0"
edition = "2024"

[dependencies]
dtb = { path = "../dtb" }
allocator = { path = "../allocator" }
typestate_macro = { path = "../typestate_macro" }
typestate = { path = "../typestate" }
file = { path = "../file" }
elf = { path = "../elf" }
arch_hal = { path = "../arch_hal" }
mutex = { path = "../mutex" }
