[package]
name = "rpi_boot"
version = "0.1.0"
edition = "2024"

[dependencies]
dtb = { path = "../dtb" }
allocator = { path = "../allocator" }
typestate_macro = { path = "../typestate_macro" }
typestate = { path = "../typestate" }
file = { path = "../file" }
block-device-api = { path = "../file/block-device-api" }
elf = { path = "../elf" }
arch_hal = { path = "../arch_hal" }
mutex = { path = "../mutex" }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
aarch64_test = { path = "../arch_hal/aarch64_hal/aarch64_test" }
aarch64_unit_test = { path = "../arch_hal/aarch64_hal/aarch64_unit_test" }
