[package]
name = "aarch64_hal"
version = "0.1.0"
edition = "2024"

[features]
uefi-test = ["aarch64_test"]

[dependencies]
paging = { path = "./paging" }
print = { path = "./print" }
cpu = { path = "./cpu" }
exceptions = { path = "./exceptions" }
aarch64_test = { path = "./aarch64_test", optional = true }
