[package]
name = "aarch64_hal"
version = "0.1.0"
edition = "2024"

[features]
default = ["paging"]
paging = ["dep:paging"]
uefi-test = ["dep:aarch64_test"]

[dependencies]
paging = { path = "./paging", optional = true }
print = { path = "./print" }
cpu = { path = "./cpu" }
exceptions = { path = "./exceptions" }
aarch64_test = { path = "./aarch64_test", optional = true }
psci = { path = "./psci" }
timer = { path = "./timer" }
