[package]
name = "exceptions"
version = "0.1.0"
edition = "2024"

[dependencies]
cpu = { path = "../cpu" }
typestate = { path = "../../../typestate" }
typestate_macro = { path = "../../../typestate_macro" }
print = { path = "../print" }
psci = { path = "../psci" }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
aarch64_test = { path = "../aarch64_test" }
aarch64_unit_test = { path = "../aarch64_unit_test" }
