[package]
name = "gic"
version = "0.1.0"
edition = "2024"

[dependencies]
typestate = { path = "../../../typestate" }
typestate_macro = { path = "../../../typestate_macro" }
cpu = { path = "../cpu" }
mutex = { path = "../../../mutex" }
aarch64_mutex = { path = "../aarch64_mutex" }
tls = { path = "../tls" }
common = { path = "../common" }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
aarch64_test = { path = "../aarch64_test" }
aarch64_unit_test = { path = "../aarch64_unit_test" }
exceptions = { path = "../exceptions" }
print = { path = "../print" }
allocator = { path = "../../../allocator" }
paging = { path = "../paging" }

[[test]]
name = "gicv2_pending"
path = "tests/gicv2_pending.rs"
harness = false

[[test]]
name = "gicv2_vgic_pending"
path = "tests/gicv2_vgic_pending.rs"
harness = false

[[test]]
name = "vgic_types"
harness = false
path = "tests/vgic_types.rs"

[[test]]
name = "gicv2_ppi_enable"
path = "tests/gicv2_ppi_enable.rs"
harness = false

[[test]]
name = "vgic_e2e_poll"
path = "tests/vgic_e2e_poll.rs"
harness = false

[[test]]
name = "vgic_e2e_irq"
path = "tests/vgic_e2e_irq.rs"
harness = false
