[package]
name = "soc"
version = "0.1.0"
edition = "2024"

[dependencies]
typestate = { path = "../../../typestate" }
typestate_macro = { path = "../../../typestate_macro" }
pci = { path = "../../../pci" }
dtb = { path = "../../../dtb" }
print = { path = "../print" }
cpu = { path = "../cpu" }
mutex = { path = "../../../mutex" }
