[package]
name = "soc"
version = "0.1.0"
edition = "2024"

[dependencies]
typestate = { path = "../../../typestate" }
typestate_macro = { path = "../../../typestate_macro" }
pci = { path = "../../../pci" }
dtb = { path = "../../../dtb" }
print = { path = "../print" }
mutex = { path = "../../../mutex" }
common = { path = "../common" }
io-api = { path = "../../../io_api" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cpu = { path = "../cpu" }
timer = { path = "../timer" }
